apps/networking/manifests/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg
  namespace: networking
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-issuer
spec:
  gatewayClassName: cilium
  listeners:

  # - allowedRoutes:
  #     namespaces:
  #       from: All
  #   name: vault-tls
  #   hostname: "vault.lab.mpopov.net" # specific domain takes precendence over wildcard
  #   port: 443
  #   protocol: TLS
  #   tls:
  #     mode: Passthrough

  - allowedRoutes:
      namespaces:
        from: All
    name: https
    hostname: "*.lab.mpopov.net"
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: eg-tls
      mode: Terminate

  - allowedRoutes:
      namespaces:
        from: All
    name: tcp
    port: 2222
    protocol: TCP

  - allowedRoutes:
      namespaces:
        from: All
    name: http
    port: 80
    protocol: HTTP
